--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -1,28 +1,35 @@
 [custom]
-ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
-ruleset=📺 迪士尼,https://raw.githubusercontent.com/java2020-007/Ruleset/main/DisneyPlus.list
-ruleset=📲 脸书消息,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Facebook.list
-ruleset=🌍 谷歌,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Google.list
-ruleset=📲 Instagram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Instagram.list
-ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
+
 ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
-ruleset=🎥 PX视频,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Telegram.list
-ruleset=📹 抖音视频,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
-ruleset=📲 推特消息,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Twitter.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Youtube.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Telegram.list
+ruleset=📹 Youtube,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Youtube.list
+ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
+ruleset=📺 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney+.list
+ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
+ruleset=🎥 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
+ruleset=📲 Facebook,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Facebook.list
+ruleset=📲 Twitter,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Twitter.list
+ruleset=📲 Instagram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Instagram.list
+ruleset=🌍 Google,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Google.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`.*
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🎯 全球直连`.*
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`.*
+custom_proxy_group=🚀 手动选择`select`.*
+custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
+custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
+custom_proxy_group=🎥 Netflix`select`.*
+custom_proxy_group=📺 Disney`select`.*
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
+custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
+custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
+custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
+custom_proxy_group=📺 Bahamut`select`.*
+custom_proxy_group=🎥 PX`select`.*
+custom_proxy_group=🌍 Google`select`[]🚀 手动选择
+custom_proxy_group=🔰 Other`select`[]🚀 手动选择`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`[]🎯 全球直连`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
