--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -1,5 +1,5 @@
 [custom]
-
+;自定义规则集
 ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Telegram.list
 ruleset=📹 Youtube,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Youtube.list
