--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -19,7 +19,7 @@ custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
 custom_proxy_group=🎥 Netflix`select`.*
-custom_proxy_group=📺 Disney`select`.*
+custom_proxy_group=📺 Disney+`select`.*
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
