--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -27,9 +27,9 @@ custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`.*
 custom_proxy_group=🎥 PX`select`.*
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
-custom_proxy_group=🔰 Other`select`[]🚀 手动选择`.*
+custom_proxy_group=🔰 Other`select`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`[]🎯 全球直连`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
 enable_rule_generator=true
 overwrite_original_rules=true
