--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -24,7 +24,7 @@ custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
-custom_proxy_group=📺 Bahamut`select`.*
+custom_proxy_group=📺 Bahamut`select`(TW|台湾)
 custom_proxy_group=🎥 PX`select`.*
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
 custom_proxy_group=🔰 Other`select`.*
