--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -15,10 +15,10 @@ ruleset=🌍 Google,https://raw.githubusercontent.com/java2020-007/Ruleset/main/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`.*
+custom_proxy_group=🚀 手动选择`select`(港|HK|Hong Kong)
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
-custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
-custom_proxy_group=🎥 Netflix`select`.*
+custom_proxy_group=📹 Youtube`select`[]🚀 手动选择`[]`(港|HK|Hong Kong)
+custom_proxy_group=🎥 Netflix`select`(港|HK|Hong Kong)`(🇸🇬|SG|狮城|新加坡)`(🇸🇬|SG|狮城|新加坡)
 custom_proxy_group=📺 Disney+`select`.*
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
