--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -17,7 +17,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`(港|HK|Hong Kong)
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
-custom_proxy_group=📹 Youtube`select`[]🚀 手动选择`[]`(港|HK|Hong Kong)
+custom_proxy_group=📹 Youtube`select`[]🚀 手动选择`[](港|HK|Hong Kong)
 custom_proxy_group=🎥 Netflix`select`(港|HK|Hong Kong)`(🇸🇬|SG|狮城|新加坡)`(🇸🇬|SG|狮城|新加坡)
 custom_proxy_group=📺 Disney+`select`.*
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
