--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -15,16 +15,16 @@ ruleset=🌍 Google,https://raw.githubusercontent.com/java2020-007/Ruleset/main/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`(港|HK|Hong Kong)
+custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
-custom_proxy_group=📹 Youtube`select`[]🚀 手动选择`[](港|HK|Hong Kong)
-custom_proxy_group=🎥 Netflix`select`(港|HK|Hong Kong)`(🇸🇬|SG|狮城|新加坡)`(🇸🇬|SG|狮城|新加坡)
-custom_proxy_group=📺 Disney+`select`.*
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`.*
+custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
+custom_proxy_group=🎥 Netflix`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`(新加坡|坡|狮城|SG|Singapore)`(港|HK|Hong Kong)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📺 Disney+`select`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
-custom_proxy_group=📺 Bahamut`select`(TW|台湾)
+custom_proxy_group=📺 Bahamut`select`(台|TW|Taiwan)
 custom_proxy_group=🎥 PX`select`.*
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
 custom_proxy_group=🔰 Other`select`.*
