--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -18,9 +18,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
-custom_proxy_group=🎥 Netflix`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`(新加坡|坡|狮城|SG|Singapore)`(港|HK|Hong Kong)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 Disney+`select`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
