--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -18,16 +18,16 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
-custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📺 Disney+`select`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`(台|TW|Taiwan)
-custom_proxy_group=🎥 PX`select`.*
+custom_proxy_group=🎥 PX`select`^((?!港|HK|Hong Kong).)*$
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
-custom_proxy_group=🔰 Other`select`.*
+custom_proxy_group=🔰 Other`select`^((?!港|HK|Hong Kong).)*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
