--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -30,6 +30,7 @@ custom_proxy_group=🌍 Google`select`[]🚀 手动选择
 custom_proxy_group=🔰 Other`select`^((?!港|HK|Hong Kong).)*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
-
+;^(?!.*AGA).*(HK|香港)
+;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 enable_rule_generator=true
 overwrite_original_rules=true
