--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -15,21 +15,22 @@ ruleset=🌍 Google,https://raw.githubusercontent.com/java2020-007/Ruleset/main/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`(港|HK|Hong Kong)
+custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
 custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)`(美|US|United States)
+custom_proxy_group=📺 Disney+`select`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`(台|TW|Taiwan)
-custom_proxy_group=🎥 PX`select`^((?!港|HK|Hong Kong).)*$
+custom_proxy_group=🎥 PX`select`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
-custom_proxy_group=🔰 Other`select`^((?!港|HK|Hong Kong).)*$
+custom_proxy_group=🔰 Other`select`(?i)^(?!.*(港|HK|Hong Kong)).*(新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
+;^((?!港|HK|Hong Kong).)*$
 ;^(?!.*AGA).*(HK|香港)
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 enable_rule_generator=true
