--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -2,20 +2,20 @@
 ;自定义简约规则集
 ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
+ruleset=📺 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
 ruleset=📺 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
-ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
-ruleset=🎥 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
+ruleset=📺 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
+ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/GlobalMedia.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
-custom_proxy_group=🎥 PX`select`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
+custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📺 PX`select`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=📺 Bahamut`select`(台|TW|Taiwan)
 custom_proxy_group=🔰 Other`select`(?i)^(?!.*(港|HK|Hong Kong)).*(新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
