--- a/config/Rule.ini
+++ b/config/Rule.ini
@@ -2,12 +2,12 @@
 ;自定义详细规则集
 ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Telegram.list
-ruleset=📹 Youtube,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Youtube.list
+ruleset=📺 Youtube,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Youtube.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
+ruleset=📺 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
 ruleset=📺 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
-ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
-ruleset=🎥 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
+ruleset=📺 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
+ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
 ruleset=📲 Facebook,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Facebook.list
 ruleset=📲 Twitter,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Twitter.list
 ruleset=📲 Instagram,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Instagram.list
@@ -17,15 +17,15 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
 custom_proxy_group=📲 Telegram`select`[]🚀 手动选择
-custom_proxy_group=📹 Youtube`select`[]🚀 手动选择
-custom_proxy_group=🎥 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📺 Youtube`select`[]🚀 手动选择
+custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 Disney+`select`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
 custom_proxy_group=📲 Facebook`select`[]🚀 手动选择
 custom_proxy_group=📲 Twitter`select`[]🚀 手动选择
 custom_proxy_group=📲 Instagram`select`[]🚀 手动选择
 custom_proxy_group=📺 Bahamut`select`(台|TW|Taiwan)
-custom_proxy_group=🎥 PX`select`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
+custom_proxy_group=📺 PX`select`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🌍 Google`select`[]🚀 手动选择
 custom_proxy_group=🔰 Other`select`(?i)^(?!.*(港|HK|Hong Kong)).*(新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
