--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -17,7 +17,7 @@ custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城
 custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
-custom_proxy_group=🔰 Other`[]🚀 手动选择`select`(?i)^(?!.*(港|HK|Hong Kong)).*(新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan|美|US|United States).*$
+custom_proxy_group=🔰 Other`select`[]🚀 手动选择`select`(?i)^(?!.*(港|HK|Hong Kong)).*(新加坡|坡|狮城|SG|Singapore|日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
