--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -10,7 +10,8 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
+;custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
@@ -27,3 +28,6 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+add_emoji=true
+remove_old_emoji=true
