--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -11,10 +11,12 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;custom_proxy_group=🚀 手动选择`select`^(?!.*NF解锁).*(港|HK|Hong Kong)
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=2
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
+;custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📺 Netflix`select`!!GROUPID=1`(新加坡|坡|狮城|SG|Singapore)
+;custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`(新加坡|坡|狮城|SG|Singapore)`(日本|[^-]日|JP|Japan)
+custom_proxy_group=📺 Disney+`select`!!GROUPID=1`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`(?i)^(?!.*(港|HK|Hong Kong)).*(日本|[^-]日|JP|Japan|美|US|United States).*$
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
@@ -28,6 +30,3 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
 enable_rule_generator=true
 overwrite_original_rules=true
-
-add_emoji=true
-remove_old_emoji=true
