--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -12,7 +12,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)
