--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -2,9 +2,9 @@
 ;自定义简约规则集
 ;ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
-ruleset=📺 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
-ruleset=📺 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
-ruleset=📺 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
+ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
+ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
+ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
 ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/GlobalMedia.list
 ruleset=🎯 全球直连,[]GEOIP,CN
@@ -12,9 +12,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=📺 Netflix`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=📺 Disney+`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=📺 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)
+custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
 ;custom_proxy_group=🔰 Other`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)
