--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -1,6 +1,5 @@
 [custom]
 ;自定义简约规则集
-;ruleset=🔰 Other,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Other.list
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
 ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
 ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
@@ -10,14 +9,13 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`!!INSERT=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0`!!INSERT=0-5!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)
+custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)`
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
-;custom_proxy_group=🔰 Other`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan|新加坡|坡|狮城|SG|Singapore|美|US|United States)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
