--- a/config/Rule_PC.ini
+++ b/config/Rule_PC.ini
@@ -1,5 +1,5 @@
 [custom]
-;自定义简约规则集
+;自定义简约规则集PC端
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
 ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
 ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
