--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -25,4 +25,4 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 
 enable_rule_generator=true
 overwrite_original_rules=true
-exclude_remarks=(官网|群组|流量|官方|网址)
+exclude_remarks=(官网|群组|流量|时间)
