--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -3,6 +3,7 @@
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
 ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
 ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
+PROCESS-NAME,com.modyolo.disney,💻 Disney+
 ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
 ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/GlobalMedia.list
