--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -17,8 +17,7 @@ custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
-
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;^((?!港|HK|Hong Kong).)*$
 ;^(?!.*AGA).*(HK|香港)
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
