--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -22,6 +22,7 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;^(?!.*AGA).*(HK|香港)
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 
+exclude_remarks=(官网|群组|流量|时间|自动)
 enable_rule_generator=true
 overwrite_original_rules=true
-exclude_remarks=(官网|群组|流量|时间)
+
