--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -14,7 +14,7 @@ custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0
+custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=0
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`(台|TW|Taiwan)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
