--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -12,9 +12,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`fallback`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,5,800
-custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`fallback`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,5,800
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`fallback`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,5,800
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`fallback`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,5,800
+custom_proxy_group=💻 Disney+`fallback`select`[]🚀 手动选择`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,800
+custom_proxy_group=📹 TikTok`select`fallback`[]🚀 手动选择`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,5,800
+custom_proxy_group=📺 PX`fallback`select`[]🚀 手动选择`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)`http://www.gstatic.com/generate_204`300,5,800
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
@@ -23,6 +23,6 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 
 exclude_remarks=(官网|群组|流量|时间|自动|官方|网址)
-update_ruleset_on_request=true
+;update_ruleset_on_request=true
 enable_rule_generator=true
 overwrite_original_rules=true
