--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -14,13 +14,14 @@ custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 抖音节点
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
+custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
 custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=2!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇸🇬 迪士尼节点`load-balance`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
-custom_proxy_group=🇯🇵 抖音节点`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇯🇵 日本节点`load-balance`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
+;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
 ;^(?!.*AGA).*(HK|香港)
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
