--- a/config/Rule1.ini
+++ b/config/Rule1.ini
@@ -13,7 +13,7 @@ custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 抖音节点
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
 custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=2!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
