--- a/config/Rule_PC.ini
+++ b/config/Rule_PC.ini
@@ -1,3 +1,4 @@
+;由于冲浪板不支持均衡负载，特分开两套规则 以供冲浪板|clash使用
 [custom]
 ;自定义简约规则集PC端
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
@@ -9,16 +10,17 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]all-load-balance
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
 custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
-custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=2!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=3!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇸🇬 迪士尼节点`load-balance`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇯🇵 日本节点`load-balance`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=all-load-balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
