--- a/config/Rule_PC.ini
+++ b/config/Rule_PC.ini
@@ -20,7 +20,7 @@ custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW
 custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=3!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇸🇬 迪士尼节点`load-balance`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇯🇵 日本节点`load-balance`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,100
-custom_proxy_group=all-load-balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=all-load-balance`load-balance`!!GROUPID=!0`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
