Update and rename Rule_Surfboard to Rule_Surfboard.ini

--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -1,4 +1,4 @@
-;由于冲浪板不支持均衡负载，特分开两套规则 以供冲浪板|clash使用
+;由于surfboard不支持均衡负载，特分开两套规则 以供surfboar|clash使用
 [custom]
 ;自定义简约规则集PC端
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
