--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -29,6 +29,6 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 
 exclude_remarks=(官网|群组|流量|时间|自动|官方|网址)
-update_ruleset_on_request=true
+;update_ruleset_on_request=true
 enable_rule_generator=true
 overwrite_original_rules=true
