--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -1,5 +1,5 @@
-;由于surfboard不支持均衡负载，特分开两套规则 以供surfboard|clash使用
 [custom]
+;由于surfboard不支持均衡负载，特分开两套规则 以供surfboard|clash使用
 ;自定义简约规则集PC端
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
 ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
@@ -29,6 +29,6 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 
 exclude_remarks=(官网|群组|流量|时间|自动|官方|网址)
-;update_ruleset_on_request=true
+update_ruleset_on_request=true
 enable_rule_generator=true
 overwrite_original_rules=true
