--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -10,7 +10,7 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]all-url-test
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]All_Nodes
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
 custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
@@ -20,7 +20,7 @@ custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW
 custom_proxy_group=🇸🇬 奈飞节点`url-test`!!GROUPID=3!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇸🇬 迪士尼节点`url-test`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇯🇵 日本节点`url-test`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,100
-custom_proxy_group=all-load-balance`url-test`!!GROUPID=!0`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=All_Nodes`url-test`!!GROUPID=!0`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
