--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -12,14 +12,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
-custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 日本节点
-custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 日本节点
+custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`!!GROUPID=3!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)
+custom_proxy_group=📺 PX`select`[]🚀 手动选择`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
-custom_proxy_group=🇸🇬 奈飞节点`url-test`!!GROUPID=3!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=🇸🇬 迪士尼节点`url-test`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=🇯🇵 日本节点`url-test`!!GROUPID=!1!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
