--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -11,14 +11,13 @@ ruleset=🐟 Final,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🔮 All_Nodes
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 奈飞节点
-custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 迪士尼节点
-custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 日本节点
+custom_proxy_group=💻 Netflix`select`[]🚀 手动选择`[]🇸🇬 SG_Nodes
+custom_proxy_group=💻 Disney+`select`[]🚀 手动选择`[]🇸🇬 SG_Nodes
+custom_proxy_group=📹 TikTok`select`[]🚀 手动选择`[]🇯🇵 JP_Nodes
 custom_proxy_group=📺 PX`select`[]🚀 手动选择`[]🇯🇵 日本节点
 custom_proxy_group=📺 Bahamut`select`[]🚀 手动选择`!!GROUPID=!0!!(台|TW|Taiwan)
-custom_proxy_group=🇸🇬 奈飞节点`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 迪士尼节点`load-balance`!!GROUPID=1!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG_Nodes`load-balance`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP_Nodes`load-balance`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 All_Nodes`load-balance`!!GROUPID=!0`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择
