--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -9,7 +9,7 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🌍 All_Nodes
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]All_Nodes
 custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
 custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
@@ -22,7 +22,7 @@ custom_proxy_group=🎯 Direct`select`[]DIRECT
 custom_proxy_group=💻 Netflix`select`!!GROUPID=0`!!INSERT=0
 
 custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 All_Nodes
-custom_proxy_group=🌍 All_Nodes`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
+custom_proxy_group=All_Nodes`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 
 ;!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;^((?!港|HK|Hong Kong).)*$
