--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -9,8 +9,8 @@ ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]All_Nodes
-custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
+custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择`[]All_Nodes
 custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG_Nodes`[]🚀 手动选择
 custom_proxy_group=📹 TikTok`select`[]🇯🇵 JP_Nodes`[]🚀 手动选择
