--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -5,6 +5,7 @@ ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main
 ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
 ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
 ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
+ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Developer.list
 ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/GlobalMedia.list
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
