--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -1,22 +1,16 @@
 [custom]
 ;自定义简约规则集Mobile端-surfboard(不支持负载均衡-故选url-test)
-ruleset=📺 Bahamut,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Bahamut.list
-ruleset=💻 Netflix,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Netflix.list
-ruleset=💻 Disney+,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Disney.list
-ruleset=📹 TikTok,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok.list
-ruleset=📺 PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/PX.list
-ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Developer.list
-ruleset=🌍 GlobalMedia,https://raw.githubusercontent.com/java2020-007/Ruleset/main/GlobalMedia.list
+ruleset=💻 NetFlix|Disney,https://raw.githubusercontent.com/java2020-007/Ruleset/main/NetFlix|Disney.list
+ruleset=📹 TikTok|PX,https://raw.githubusercontent.com/java2020-007/Ruleset/main/TikTok|PX.list
+ruleset=🌍 Global,https://raw.githubusercontent.com/java2020-007/Ruleset/main/Global.list
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
 
 custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🌍 AllNodes
-custom_proxy_group=🌍 GlobalMedia`select`[]🚀 手动选择
-custom_proxy_group=💻 Netflix`select`[]🇸🇬 SG`[]🚀 手动选择
-custom_proxy_group=💻 Disney+`select`[]🇸🇬 SG`[]🚀 手动选择
-custom_proxy_group=📹 TikTok`select`[]🇯🇵 JP`[]🚀 手动选择
-custom_proxy_group=📺 PX`select`[]🇯🇵 JP`[]🚀 手动选择
-custom_proxy_group=📺 Bahamut`select`!!GROUPID=!0!!(台|TW|Taiwan)`[]🚀 手动选择
+custom_proxy_group=🌍 Global`select`[]🚀 手动选择
+custom_proxy_group=🌍 Global`select`[]🚀 手动选择
+custom_proxy_group=💻 NetFlix|Disney`select`[]🇸🇬 SG`[]🚀 手动选择
+custom_proxy_group=📹 TikTok|PX`select`[]🇯🇵 JP`[]🚀 手动选择
 custom_proxy_group=🇸🇬 SG`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`!!GROUPID=!0!!(日本|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
