--- a/config/Rule_Clash.ini
+++ b/config/Rule_Clash.ini
@@ -6,7 +6,7 @@ ruleset=🌍 Global,https://raw.githubusercontent.com/java2020-007/Ruleset/main/
 ruleset=🎯 Direct,[]GEOIP,CN
 ruleset=🐟 Final,[]FINAL
 
-custom_proxy_group=🚀 手动选择`select`!!GROUPID=0`[]🌍 AllNodes
+custom_proxy_group=🚀 手动选择`select`!!GROUPID=0
 custom_proxy_group=🌍 Global`select`[]🚀 手动选择
 custom_proxy_group=💻 NetFlix|Disney`select`(新加坡|坡|狮城|SG|Singapore)`[]🚀 手动选择
 custom_proxy_group=📹 TikTok|PX`select`(日本|[^-]日|JP|Japan)`[]🚀 手动选择
