--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -1,9 +1,5 @@
 [General]
 ;自定义简约规则集Mobile端-Shadowrocket
-
-[Host]
-localhost = 127.0.0.1
-
 bypass-system = true
 dns-server = system, 119.29.29.29, 114.114.114.114, 223.5.5.5, 1.2.4.8
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
@@ -16,5 +12,18 @@ RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, P
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
+[Host]
+localhost = 127.0.0.1
+
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
+#YouTube
+^https:\/\/duckduckgo.com\/\?q=ytb\+([^&]+).+ https://www.youtube.com/results?search_query=$1 302
+
+[Script]
+YouTube去广告 = type=http-request,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),script-path=https://choler.github.io/Surge/Script/YouTube.js,script-update-interval=0,enable = true
+
+[MITM]
+enable = true
+hostname = www.google.cn, *.googlevideo.com
+ca-p12 =
