--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -6,12 +6,12 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, *.crashlytics.com, *.edu.cn, captive.apple.com
 
 [Proxy Group]
-SG = select,(新加坡|坡|狮城|SG|Singapore),interval=300,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-JP = select,(日本|[^-]日|JP|Japan),interval=300,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+💻 NetFlix|Disney = select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(新加坡|坡|狮城|SG|Singapore)
+📹 TikTok|PX = select,select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(日本|[^-]日|JP|Japan)
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, SG
-RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/TikTok|PX.list, JP
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, 💻 NetFlix|Disney
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/TikTok|PX.list, 📹 TikTok|PX
 RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
