--- a/config/Rule_Shadowrocket.conf
+++ b/config/Rule_Shadowrocket.conf
@@ -10,9 +10,10 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 📹 TikTok|PX = select,url=http://www.gstatic.com/generate_204,interval=86400,timeout=5,select=0,policy-regex-filter=(日本|[^-]日|JP|Japan)
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/AdBlock.list, Reject
 RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/NetFlix|Disney.list, 💻 NetFlix|Disney
 RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/TikTok|PX.list, 📹 TikTok|PX
-RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, Proxy
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
