--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -23,6 +23,6 @@ custom_proxy_group=🌍 AllNodes`select`(^(?!.*(港|HK|Hong Kong)).*)
 ;^(?!.*AGA).*(HK|香港)
 ;(?i)^(?!.*(US|美)).*(港|HK|台湾|澳).*$
 
-exclude_remarks=(官网|群组|流量|时间|自动|官方|网址)
+exclude_remarks=(官网|群组|流量|时间|自动|官方|网址|续费)
 enable_rule_generator=true
 overwrite_original_rules=true
