--- a/config/Rule_QuantumultX.conf
+++ b/config/Rule_QuantumultX.conf
@@ -128,7 +128,7 @@ static=TikTok|PX, server-tag-regex=(?i)(日|🇯🇵|JP|东京|Japan), img-url=h
 # 💻 NetFlix|Disney
 static=NetFlix|Disney, server-tag-regex=(?i)(坡|🇸🇬|SG|新加坡|狮城|Singapore), img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/ForeignMedia.png
 # 🐟 漏网之鱼
-static=Final, AllNodes, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png
+static=Final, DIRECT, AllNodes, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png
 # 🌍 AllNodes
 static=AllNodes, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Airport.png
 
