--- a/config/Rule_QuantumultX.conf
+++ b/config/Rule_QuantumultX.conf
@@ -143,12 +143,7 @@ https://raw.githubusercontent.com/stone0118/Ruleset/main/Global.list, tag=🌍 G
 
 # 远程重写规则
 [rewrite_remote]
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/WPS.conf, tag=WPS解锁会员, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/CaiYun.conf, tag=彩云天气, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/KuWo.conf, tag=酷我音乐, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Picsew.conf, tag=Picsew滚动截图, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/TikTok.sgmodule, tag=国际抖音, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/YouTubeAds.conf, tag=YouTube去广告, update-interval=-1, opt-parser=false, enabled=true
+;https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/WPS.conf, tag=WPS解锁会员, update-interval=-1, opt-parser=false, enabled=true
 
 # 本地服务器
 [server_local]
