公众号去广告

--- a/config/QuantumultX/Rewrite/WeChat.conf
+++ b/config/QuantumultX/Rewrite/WeChat.conf
@@ -1,4 +1,6 @@
-; WeChat公众号文章下部去广告
+; WeChat公众号去广告
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 hostname = mp.weixin.qq.com
 ;^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/stone0118/Ruleset/main/config/QuantumultX/Script/WeChat.js
+# > 微信
+^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
