--- a/config/QuantumultX/Rewrite/UnlockVip.conf
+++ b/config/QuantumultX/Rewrite/UnlockVip.conf
@@ -1,6 +1,6 @@
 # QX解锁各类VIP
 
-hostname= m.iqiyi.com,z1.m1907.cn, m.youku.com, m.v.qq.com, m.bilibili.com, biz.caiyunapp.com, pan.baidu.com, account.wps.cn, shimo.im, buy.itunes.apple.com,  
+hostname= m.iqiyi.com,z1.m1907.cn, m.youku.com, m.v.qq.com, m.bilibili.com, biz.caiyunapp.com, pan.baidu.com, account.wps.cn, shimo.im, buy.itunes.apple.com
 
 # 🔓影视VIP
 # 爱奇艺
