--- a/config/QuantumultX/Rewrite/Others.conf
+++ b/config/QuantumultX/Rewrite/Others.conf
@@ -3,7 +3,7 @@
 hostname= mp.weixin.qq.com, ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, *.tiktokv.com, *.byteoversea.com, *.tik-tokapi.com, weixin110.qq.com, security.wechat.com, *.baidu.com
 
 # 微信公众号阅读（全自动），阅读得积分，100积分换1元
-^https?://mp\.weixin\.qq\.com/s\?.* url script-response-body https://raw.githubusercontent.com/WSL33099/QuantumultX/main/jiaoben/wechat_auto_read.js
+;^https?://mp\.weixin\.qq\.com/s\?.* url script-response-body https://raw.githubusercontent.com/WSL33099/QuantumultX/main/jiaoben/wechat_auto_read.js
 
 # Netflix评分
 ^https?://ios(-.*)?\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
