--- a/config/Rule_Surfboard.ini
+++ b/config/Rule_Surfboard.ini
@@ -11,8 +11,8 @@ custom_proxy_group=🌍 Global`select`[]🚀 手动选择
 custom_proxy_group=🌍 Global`select`[]🚀 手动选择
 custom_proxy_group=💻 NetFlix|Disney`select`(新加坡|坡|狮城|SG|Singapore)`[]🚀 手动选择
 custom_proxy_group=📹 TikTok|PX`select`(日本|[^-]日|JP|Japan)`[]🚀 手动选择
-custom_proxy_group=🎯 Direct`select`DIRECT
-custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 AllNodes`DIRECT
+custom_proxy_group=🎯 Direct`select`[]DIRECT
+custom_proxy_group=🐟 Final`select`[]🚀 手动选择`[]🌍 AllNodes`[]DIRECT
 custom_proxy_group=🌍 AllNodes`select`(^(?!.*(港|HK|Hong Kong)).*)
 ;custom_proxy_group=🌍 AllNodes`select`!!GROUPID=!0!!(^(?!.*(港|HK|Hong Kong)).*)
 ;custom_proxy_group=🇸🇬 SG`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
